# shared/pkg/openapi/app/v1/oas_request_encoders_gen.go
@@ -38,3 +38,17 @@ func encodeAuthRefreshPostRequest(
 	ht.SetBody(r, bytes.NewReader(encoded), contentType)
 	return nil
 }
+
+func encodeWorkflowsTestUserOnboardingPostRequest(
+	req *TestWorkflowRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
