# shared/pkg/openapi/app/v1/oas_response_encoders_gen.go
@@ -69,6 +69,20 @@ func encodeAuthRefreshPostResponse(response *AuthToken, w http.ResponseWriter, s
 	return nil
 }
 
+func encodeWorkflowsTestUserOnboardingPostResponse(response *TestWorkflowResponse, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeErrorResponse(response *ErrorStatusCode, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	code := response.StatusCode
